# spades

./: .clangd  .gitignore  1  2  404.html  CMakeLists.txt  Dockerfile  LICENSE  NEWREADME.md  README.md  VERSION  binspreader.html  changelog.md  citation.html  code_of_conduct.md  compare_saves.sh  datatypes.html  etch_init.sh  feedback.html  getting-started.html  hmm.html  hpc.html  hybrid.html  index.html  input.html  installation.html  make-rpm.sh  make-spades-debian.sh  make-targz.sh  mkdocs.yml  output.html  pathracer.html  readme.txt  release-to-morality.sh  rna.html  rnaspades_manual.html  run_teamcity  running.html  spades.spec  spades_compile.sh  (+4 more)
assembler/ext/src/: .gitignore  CMakeLists.txt
assembler/ext/tools/: CMakeLists.txt
assembler/src/: .gitignore  CMakeLists.txt  CMakeLists.txt.user.44fa758.2.6pre1  CMakeLists.txt.user.6a3f983.15  CMakeListsInternal.txt  assembler.cpp  condensed_graph.cpp  condensed_graph.h  condensed_graph.hpp  cuckoo.cpp  cuckoo.hpp  graph.cpp  graph.hpp  graphVisualizer.cpp  graphVisualizer.hpp  ifastqstream2.hpp  ifaststream.hpp  ireadstream.hpp  log.hpp  logging.hpp  makefile.inc  makefile.inc2  matepair.hpp  new_makefile.inc  nucl.cpp  nucl.hpp  parser.cpp  parser.hpp  qual.hpp  seq.cpp  seq.hpp  sequence.cpp  sequence.hpp  strobe_read.hpp
assembler/src/abruijn/: .cproject  .cproject.template  .project.template  CMakeLists.txt  Makefile  Makefile.inc  Makefile.old  a.sh  abruijn debug.launch  abruijn release.launch.template  abruijn_graph.cpp  abruijn_graph.hpp  abruijngraph.cpp  abruijngraph.hpp  drawgraph.bat  graph.cpp  graph.h  graph.hpp  graphBuilder.cpp  graphBuilder.h  graphBuilder.hpp  graph_builder.cpp  graph_builder.hpp  hash.cpp  hash.hpp  main.cpp  makefile  parameters.h  parameters.hpp  srclist.inc  toy_examples.cpp  toy_examples.hpp  toyexamples.cpp  toyexamples.hpp
assembler/src/assembly_graph/: debruijn_data.hpp  debruijn_graph.hpp  graph_core.hpp
assembler/src/bayes/: CMakeLists.txt  bayes.cpp~  bayes.hpp~  bayes_quality.cpp  bayes_quality.cpp~  bayes_quality.hpp  bayes_quality.hpp~  main.cpp  main.cpp~  makefile  makefile~  name.txt  prepare.pl
assembler/src/cap/: .cproject  .project  CMakeLists.txt  assembly_compare.hpp  assembly_problem_detection.hpp  cap_commands.hpp  cap_config_struct.hpp  cap_environment.hpp  cap_environment_manager.hpp  cap_graph_pack.hpp  cap_kmer_index.hpp  cap_logger.hpp  cap_online_visualizer.hpp  colored_graph_construction.hpp  coloring.hpp  compare_standard.hpp  comparison_utils.hpp  coordinates_handler.hpp  diff_masking.hpp  gene_analysis.hpp  genome_correction.hpp  graph_traversal_constraints.hpp  junk_cropping_reader.hpp  longseq.hpp  main.cpp  mosaic.hpp  path_projector.hpp  polynomial_hash.hpp  repeat_cropping_reader.hpp  repeat_masking.hpp  serialization.hpp  simple_indel_finder.hpp  simple_inversion_finder.hpp  stats.hpp  test_utils.hpp  tools.cpp  untangling.hpp  visualization.hpp
assembler/src/cclean/: CMakeLists.txt  QcException.cpp  QcException.hpp  adapter_index.cpp  adapter_index.hpp  additional.cpp  aho_corasick.cpp  aho_corasick.hpp  brute_force_clean.cpp  brute_force_clean.hpp  comparator.hpp  config_struct_cclean.cpp  config_struct_cclean.hpp  database.cpp  database.hpp  job_wrappers.cpp  job_wrappers.hpp  main.cpp  output.cpp  output.hpp  running_modes.cpp  running_modes.hpp  utils.cpp  utils.hpp  valid_kmer_generator.hpp
assembler/src/cmake/: FindReadline.cmake  deps.cmake  flags.cmake  includes.cmake  libs.cmake  options.cmake  pack.cmake  proj.cmake  test.cmake  utils.cmake
assembler/src/common/: CMakeLists.txt  assembler.cpp  cuckoo.hpp  filter_iterator.hpp  graph.hpp  graphVisualizer.cpp  graphVisualizer.hpp  graph_printer.cpp  graph_printer.hpp  ifaststream.hpp  ireadstream.hpp  logging.hpp  new_queue_iterator.hpp  nucl.cpp  nucl.hpp  qual.hpp  quality.hpp  quality_read_stream.hpp  quality_read_stream2.hpp  queue_iterator.hpp  read.hpp  readGenerator.hpp  read_generator.hpp  readsReformatter.hpp  seq.hpp  seq_filter.hpp  seq_map.hpp  sequence.cpp  sequence.hpp  sequence_data.hpp  simple_index.hpp  simple_tools.cpp  simple_tools.hpp  strobe_read.hpp  strobe_reader.hpp  structures.hpp  trie.hpp  xmath.h
assembler/src/common_test/: .cproject.template  .project.template  CMakeLists.txt  common_test debug.launch.template  common_test release.launch.template  converting_reader_wrapper_test.hpp  cuckoo_test.hpp  cutting_reader_wrapper_test.hpp  fasta_fastq_gz_parser_test.hpp  ireadstream_test.hpp  multifile_reader_test.hpp  nucl_test.hpp  offline_graph_visualizer_test.hpp  online_graph_visualizer_test.hpp  paired_read_test.hpp  parser_test.hpp  rc_reader_wrapper_test.hpp  read_generator_test.hpp  reader_pairedread_test.hpp  reader_singleread_test.hpp  sam_bam_parser_test.hpp  seq_filter_test.hpp  seq_test.hpp  sequence_test.hpp  sff_parser_test.hpp  similar_test.hpp  single_read_test.hpp  structures_test.hpp  test.cpp
assembler/src/corrector/: CMakeLists.txt  config_struct.cpp  config_struct.hpp  contig_processor.cpp  contig_processor.hpp  dataset_processor.cpp  dataset_processor.hpp  include.hpp  interesting_pos_processor.cpp  interesting_pos_processor.hpp  main.cpp  positional_read.cpp  positional_read.hpp  read.cpp  read.hpp  sam_reader.cpp  sam_reader.hpp  utils.cpp  utils.hpp  variants_table.hpp
assembler/src/debruijn/: .cproject  .cproject.template  .project  .project.template  CMakeLists.txt  ID_track_handler.hpp  assembler.cpp  assembly_compare.hpp  bucket_mapper.hpp  bulge_remover.hpp  bulge_remover_factory.hpp  bwa_pair_info_count.cpp  bwa_pair_info_count.hpp  bwa_pair_info_filler.cpp  bwa_pair_info_filler.hpp  check_tools.hpp  chromosome_removal.cpp  chromosome_removal.hpp  condensedGraph.cpp  condensedGraph.hpp  condensedGraphConstructor.hpp  condensed_graph.cpp  condensed_graph.hpp  condensed_graph_constructor.hpp  config.hpp  config.info.template  config.inp  config_common.hpp  config_file_ptree.h  config_struct.cpp  config_struct.hpp  config_template.info  config_template.ini  config_template.inp  connected_component.cpp  construction.cpp  (+149 more)
(+12433 files in other folders)
